--- a/siteDesafio/index.html
+++ b/siteDesafio/index.html
@@ -20,7 +20,7 @@
           <li><a href="#home">Início</a></li>
           <li><a href="#locacao">Locação</a></li>
           <li><a href="#social">Social</a></li>
-          <li></li>
+          <li><a href="https://www.instagram.com/asttaroth/">Singas</a></li>
         </ul>
       </nav>
   </header>
