--- a/siteDesafio/index.html
+++ b/siteDesafio/index.html
@@ -6,13 +6,15 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
   <title>TC Training</title>
 </head>
 <body>
   <header class="header">
     <div class="botaoHome">
       <a href="#home" title="TC Training">
-       <img class="logo" src="/img/imagem_2020-11-18_135450_auto_x1.png" alt="">
+       <img class="logo" src="/img/tclogo3.jpg" alt="">
       </a>
     </div>  
     <nav class="menu">
@@ -24,5 +26,22 @@
         </ul>
       </nav>
   </header>
-</body>
+  <section>
+  <div class="corpo-site">
+    <div id="underline>">
+      <h1 class="titulo">quem somos</h1>
+    </div>
+  </div>
+  </section>
+    <div class="fundo-quem-somos">
+     <img id="nos" src="/img/nos.jpg" alt="">
+    </div> <br>
+    <article id="artigo1">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, blanditiis. Nihil iure perspiciatis voluptatum. Omnis nesciunt veritatis, ipsa aliquam aperiam veniam, exercitationem nisi ipsam reiciendis ex repellendus sapiente autem libero?
+    Officiis ullam tempore cumque fugit voluptate. Qui voluptates modi quisquam, impedit possimus labore explicabo corrupti nemo, ipsum tempore asperiores delectus optio magnam quia numquam accusamus omnis perferendis ex porro neque.
+    Similique non maiores praesentium dolor voluptatem voluptatum beatae molestias natus eaque recusandae iure illum numquam aut nam delectus quisquam doloribus minima aliquid, nobis officia. Neque nihil labore porro nemo illo.
+    Fuga exercitationem repudiandae corporis rerum nostrum possimus mollitia delectus aut maxime accusamus recusandae veniam quidem dolorem sed obcaecati aliquid ullam, dolores dignissimos? Iure quis esse voluptate, aliquam molestiae culpa ducimus.
+    Temporibus quod iure aliquam explicabo provident cumque optio voluptatibus quas dignissimos nobis, in ullam officiis eaque officia beatae minima est nemo corporis labore modi odit
+    </article>
+  </body>
 </html>
