--- a/siteDesafio/index.html
+++ b/siteDesafio/index.html
@@ -28,7 +28,7 @@
   </header>
   <section>
   <div class="corpo-site">
-    <div id="underline>">
+    <div>
       <h1 class="titulo">quem somos</h1>
     </div>
   </div>
