--- a/siteDesafio/index.html
+++ b/siteDesafio/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Anton&display=swap"
       rel="stylesheet"
@@ -23,31 +28,31 @@
           <img
             id="home"
             class="logo"
-            src="/img/imagem_2020-11-18_135450_auto_x1.png"
+            src="/img/tclogo2.png"
             alt="TC Training Logo"
           />
         </a>
       </div>
       <nav class="menu">
         <ul>
+          <li><a href="#home">Início</a></li>
           <li><a href="#locacao">Locação</a></li>
           <li><a href="#social">Social</a></li>
-          <li><a href="#contato">Contato</a></li>
         </ul>
       </nav>
+      <p style="color: transparent" id="home">inicio</p>
     </header>
     <section>
       <div class="corpo-site">
         <div>
           <h1 class="titulo">quem somos</h1>
-          <hr>
         </div>
       </div>
     </section>
     <div>
       <img id="nos" src="/img/nos.jpg" alt="" />
     </div>
-    <br>
+    <br />
     <article id="artigo1">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, blanditiis.
       Nihil iure perspiciatis voluptatum. Omnis nesciunt veritatis, ipsa aliquam
@@ -85,137 +90,10 @@
       voluptates sunt illo asperiores at sapiente et ipsum nemo. Iusto quas
       cumque vero praesentium magnam numquam quam. Officia facilis quam,
       temporibus consectetur laborum iste ab in? Veritatis eveniet perspiciatis
-      aliquid voluptas autem quidem ipsum, eum maxime iure sapiente asperiores
-      excepturi et soluta facere. Rem vitae ipsa rerum. Doloremque temporibus ab
-      dolorum, aliquid numquam unde, veritatis ipsam alias fuga cumque tempora.
-      Dolorum at suscipit, esse, praesentium eum porro ratione corrupti et iste
-      pariatur reiciendis vero id hic! Earum. Sequi est magni sapiente id
-      quaerat voluptatum consequuntur natus! Magni soluta incidunt perferendis
-      hic in tempore eligendi accusamus odio minima. Totam eligendi libero
-      dolorum nobis nostrum consequuntur assumenda eos doloribus. Est fuga harum
-      et voluptates vero soluta molestiae, nisi, deleniti doloribus ea nulla
-      eius aliquam temporibus quidem dolores facilis molestias laborum a! Earum
-      fugit aperiam inventore magnam perspiciatis eos error. Perferendis nulla
-      reprehenderit iusto veniam inventore, velit cupiditate quisquam omnis,
-      quod hic adipisci eius asperiores minima. Aspernatur nostrum amet
-      voluptatibus corrupti veniam. Molestias, hic error! Eum consequuntur
-      voluptates accusamus sed? Nulla dolor deserunt soluta iure cupiditate quam
-      blanditiis enim, et aut ipsam natus hic sunt ad commodi porro, consequatur
-      voluptatum id recusandae explicabo quia alias rerum molestias sit!
-      Aliquid, sit? Enim, nobis ut. Libero pariatur nam numquam molestias
-      obcaecati minus cupiditate, praesentium dolore blanditiis, sapiente
-      suscipit. Ex iure ab deserunt, porro eligendi tempore doloremque
-      reiciendis unde quam suscipit, quibusdam ipsam. Omnis fugiat ducimus quis
-      quod, explicabo ea alias quasi aliquid eum similique provident, est
-      reprehenderit exercitationem! Commodi maxime praesentium aliquam dolore
-      dolores quis, incidunt, voluptate laudantium quisquam sed, exercitationem
-      quas. Cumque sed aliquid repudiandae quam velit tempora ut similique.
-      Similique aperiam at repudiandae nobis totam quos, maxime veniam rerum
-      architecto nulla nisi perferendis enim unde nam minus ea recusandae eum?
-      Esse iure deleniti accusamus ea earum vel dolorum alias suscipit fugit
-      odit voluptas iusto, accusantium soluta, doloremque nobis quam! Harum,
-      magni soluta ut blanditiis odio aliquid sit! Rem, expedita fuga. Incidunt,
-      eius labore vitae reiciendis quam pariatur porro officia ex? Deleniti,
-      nostrum accusamus. Dignissimos nemo ipsam dolorum tempore iste similique
-      maxime obcaecati accusamus harum? Velit incidunt saepe non magnam a?
-      Assumenda inventore quam officiis quisquam repellat, placeat beatae iusto
-      soluta mollitia, tempora eos aperiam. Magnam enim quam optio minus iusto.
-      Ut, minima alias? Expedita, repellat numquam? Voluptate nesciunt
-      laudantium eligendi. Dolor voluptatum debitis incidunt quaerat dicta
-      inventore dignissimos accusamus, voluptates eius doloribus rerum, iste
-      blanditiis saepe? Nulla cum quibusdam aut exercitationem, incidunt
-      reprehenderit sapiente culpa ratione, harum, illum quas repellendus?
-      Possimus, pariatur repellat. Animi maiores sed iure modi. Sapiente tenetur
-      blanditiis necessitatibus eligendi, veritatis ex quaerat voluptas!
-      Explicabo eveniet doloremque hic sed iste nihil, eos inventore iusto
-      tempore mollitia minima. Alias officia harum laudantium doloribus soluta
-      voluptate, temporibus totam, iusto velit in assumenda, a autem. Quibusdam
-      illum at alias exercitationem deserunt voluptates, repellendus rem
-      veritatis nulla aperiam quia impedit soluta. Temporibus porro voluptate
-      sed assumenda ea exercitationem, saepe doloribus repellendus dolore earum
-      itaque quidem illum iste natus sapiente sunt est dolor non quos maiores
-      cum asperiores necessitatibus repellat! Debitis, laboriosam. Tenetur
-      magnam culpa sint, nemo ducimus nisi, ab quis voluptatum expedita aperiam
-      esse. Voluptate architecto laborum quam cupiditate voluptas a, ea illum
-      animi aperiam maxime! Asperiores earum reprehenderit sit enim! Magnam
-      totam architecto asperiores, natus debitis illum dolorem veniam amet, enim
-      deserunt omnis. Qui vitae mollitia nobis voluptates inventore numquam,
-      distinctio maiores reprehenderit maxime, modi soluta alias repudiandae
-      voluptatum ipsum. Sed quasi ab qui error earum inventore laboriosam.
-      Aliquid quis labore reprehenderit? Perspiciatis deserunt, ex ipsam esse
-      accusantium non eum harum voluptates sint qui asperiores excepturi magnam
-      deleniti vero vel. Sed quaerat, aliquid porro repudiandae quidem nulla
-      dolorem mollitia est praesentium deserunt, provident obcaecati maxime
-      aliquam eos et ullam eum debitis repellendus numquam dolorum! Tempore
-      sequi laborum pariatur beatae ea! Harum, rem quia cumque delectus totam
-      doloremque voluptates recusandae officia ducimus laudantium, ab
-      exercitationem animi iste. Accusantium eum voluptates magnam
-      exercitationem quibusdam quod non ipsum sequi, animi repudiandae amet
-      facilis. Maxime neque sapiente facere voluptates veniam tempora quas et
-      similique temporibus voluptatum, numquam dolores minima dolore
-      exercitationem itaque quae dolor magni harum nam, repellendus, fugiat
-      laudantium! Neque culpa eligendi mollitia! Consequatur eveniet veniam
-      consequuntur adipisci, quidem officiis alias soluta. Iste, voluptatum
-      voluptatibus, hic asperiores dignissimos iure dolore consectetur, totam
-      animi velit dicta incidunt doloribus magnam ea similique laborum placeat
-      perspiciatis? Omnis, natus. Nesciunt dolor voluptatum esse hic totam quam
-      fuga quidem doloremque assumenda, omnis qui temporibus? Debitis
-      consectetur porro aliquid quasi consequuntur temporibus doloribus harum
-      quos ab molestias, explicabo placeat! Laboriosam inventore odio sunt
-      soluta, nesciunt animi dolores tempora quis, illo necessitatibus ratione
-      facilis consequuntur officiis expedita consequatur exercitationem nobis
-      omnis et deserunt commodi veniam fugiat! Facere facilis atque eligendi!
-      Totam repellat rem, enim, explicabo accusamus beatae impedit odio atque
-      facere debitis, eligendi ipsum libero natus sed provident nobis soluta
-      numquam sint maxime dolor minima vitae. Minima eum ipsam quam? Explicabo
-      doloribus ipsa tempore architecto mollitia fugiat, eum labore error, sed
-      officiis dolorem? Fugiat officia, officiis aspernatur aliquam dolor
-      cupiditate ad suscipit exercitationem et similique ipsa voluptas,
-      molestiae ipsam pariatur? Reiciendis voluptas aspernatur iste cupiditate
-      nobis officia, praesentium atque minima optio ex magni in tenetur
-      laudantium perferendis eligendi voluptatibus eum temporibus non sint
-      voluptatem unde quisquam explicabo deleniti debitis. Ipsam. Quia incidunt
-      consequuntur fugit tempore ut impedit reprehenderit quo magnam rem esse.
-      In id iure beatae, commodi excepturi recusandae officiis aperiam. Pariatur
-      quas natus ea illum modi iusto aperiam sunt. Suscipit perferendis officiis
-      nobis excepturi ducimus enim facilis officia eligendi illo porro, ipsam
-      temporibus, vero, esse sint! Voluptatem, minima? Consequatur beatae
-      voluptatum provident dolores quaerat atque repellendus, pariatur
-      aspernatur quibusdam? Suscipit sed, iste eaque, culpa, dolorum
-      reprehenderit corrupti quos voluptate error deserunt numquam commodi
-      explicabo? Laudantium eligendi corrupti facilis, porro ab quas temporibus
-      modi cumque hic maiores voluptates saepe odit! Quia, iure fugit minus
-      quisquam et, non aspernatur dicta, aut nam laborum odit molestias
-      consequatur. Itaque, corporis velit! Eveniet voluptatibus et laborum,
-      ducimus exercitationem odit libero molestiae laboriosam velit dolorem.
-      Similique nesciunt, dolorum nostrum molestias sit atque provident tenetur
-      quibusdam nam accusantium nihil? Voluptates tempora dignissimos soluta
-      nostrum dicta architecto impedit, suscipit tenetur veniam asperiores
-      fugiat quod accusantium consequuntur quidem. Voluptas exercitationem,
-      excepturi error laudantium reiciendis pariatur consectetur debitis vel
-      quia non. Delectus totam laboriosam molestiae voluptatem fugiat velit
-      nobis distinctio harum eaque aut fuga necessitatibus, eum hic provident
-      voluptates! Accusamus veritatis quam, rerum enim quis veniam id incidunt
-      tempore a minus fuga dignissimos quia inventore sequi laudantium nisi vero
-      ad praesentium ullam maiores hic magni! Tempore quas accusantium
-      excepturi? Quis nobis veniam, quibusdam odio dolores iusto alias. Quisquam
-      consequuntur doloremque fugit quae assumenda rem perspiciatis rerum at a
-      ea, corrupti, eveniet quia nesciunt eius voluptatibus culpa suscipit
-      maiores repudiandae? Reprehenderit quia sunt aut blanditiis hic
-      repudiandae earum nihil. Asperiores enim, fugit blanditiis amet tenetur
-      dolore molestias necessitatibus magnam doloribus ipsam mollitia voluptate
-      recusandae libero at non soluta. Rem, voluptatem! Alias unde ipsam est
-      enim culpa consequuntur aperiam sed vero rem veritatis sequi
-      necessitatibus molestias hic iste et voluptate, laboriosam dignissimos,
-      autem, animi eaque atque sint in illum quis. Cumque. Odit nostrum vel
-      soluta repellendus error? Voluptatum officiis nulla porro, nihil, velit
-      eos consequatur dolore soluta voluptatibus beatae error? Libero qui
-      voluptas, quo necessitatibus corporis ut voluptate? Velit, vel quo.
     </article>
     <div>
       <h1 class="titulo" id="locacao">ONDE ESTAMOS?</h1>
     </div>
-    <hr>
     <div>
       <p style="text-align: center" class="gmap_canvas">
         <iframe
@@ -230,10 +108,58 @@
         >
         </iframe>
       </p>
+      <h3 id="infoLocacao">Temos estacionamento no local!</h3>
+      <br />
     </div>
     <div>
-      <h1 class="titulo">acompanhe-nos</h1>
-      <hr />
+      <h1 id="social" class="titulo">acompanhe-nos</h1>
     </div>
+    <div class="redes-sociais">
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/tctrainingrj/" target="_blank"
+            ><h2>Instagram</h2>
+            <img src="/img/instagram (1).png" alt="" />
+          </a>
+        </li>
+      </ul>
+    </div>
+    <footer class="footer">
+      <div class="footer-content">
+        <nav class="footer-links">
+          <div>
+            <h3 class="footer-title">Parceiros</h3>
+            <div>  
+            <hr>
+            <ul class="footer-list">
+              <li>
+                <a href="https://www.instagram.com/sitio300_/" target="_blank">
+                  <h4 class="partner">Sitio 300</h4>
+                  <img class="partner-images" src="/img/sitio300.png " alt=""
+                />
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/bsdeesigner/" target="_blank">
+                  <h4 class="partner">BS Designer</h4>
+                  <img class="partner-images" src="/img/bsdesigner.png
+                   " alt=""
+                />
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/hortbiorj/" target="_blank">
+                  <h4 class="partner">Hort Bio</h4>
+                  <img class="partner-images" src="/img/hortbio.png".png
+                   " alt=""
+                />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <h6>FEITO POR RAPHAEL VICTOR © Todos os Direitos Reservados - 2020</h6>
+    </footer>
   </body>
 </html>
